Use action-form snippet for non-submit participation actions
ParticipationAction is unusual because its form_class is an
InlineFormSet, not a ModelForm. So rendering it to HTML while
customizing the details uses a different loop structure, which doesn't
work if you get handed a ModelForm instead. And when the action is not
"submit", the template is handed a ModelForm, so it didn't generate
sensible HTML for anything in those cases.

--- a/home/templates/home/preview/participation_action.html
+++ b/home/templates/home/preview/participation_action.html
@@ -73,6 +73,7 @@
 </ul>
 {% endif %}
 
+{% if view.kwargs.action == "submit" %}
 <p><form action="" method="post">
 	{% csrf_token %}
 	{{ form.management_form }}
@@ -123,6 +124,9 @@
 	{% endfor %}
 	<input type="submit" class="btn btn-{% if view.kwargs.action == 'withdraw' %}warning{% elif view.kwargs.action == 'reject' %}danger{% else %}success{% endif %}" value="{{ view.kwargs.action|title }}" />
 </form></p>
+{% else %}{# action is something other than submit #}
+{% include "home/snippet/action_form.html" %}
+{% endif %}
 
 {% if view.kwargs.action == 'submit' %}
 	<h2>Funding for Additional Outreachy Interns</h2>
