Improve organizer workflow for approving community participation.
Avoid a double approval screen when approving a community. Only ask for
a double check when rejecting a community (since we need a reason for
denying a community).

Layout approve and reject buttons with Bootstrap's grid system. This
will cause the reject button to be off to the far right when viewing on
a desktop system. Add margins around the buttons to allow for spacing in
between the buttons when viewing on a mobile device.

--- a/home/templates/home/community_read_only.html
+++ b/home/templates/home/community_read_only.html
@@ -346,12 +346,23 @@ This page is for potential mentors and coordinators only. If you are an Outreach
 			{% endif %}
 			<li><a href="{{ participation_info.get_absolute_url }}">Community landing page</a></li>
 		</ul>
-		{% if participation_info.approval_status != participation_info.APPROVED and not current_round.lateprojects.has_passed %}
-			<a href="{{ participation_info.get_approve_url }}" class="btn btn-success">Approve Community</a>
-		{% endif %}
-		{% if participation_info.approval_status != participation_info.REJECTED %}
-			<a href="{{ participation_info.get_reject_url }}" class="btn btn-warning">Reject Community</a>
-		{% endif %}
+		<div class="container">
+			<div class="row">
+				<div class="col">
+				{% if participation_info.approval_status != participation_info.APPROVED and not current_round.lateprojects.has_passed %}
+						<form action="{{ participation_info.get_approve_url }}" method="post">
+							{% csrf_token %}
+							<input type="submit" class="btn btn-success m-2" value="Approve Community" />
+						</form>
+				{% endif %}
+				</div>
+				<div class="col">
+					{% if participation_info.approval_status != participation_info.REJECTED %}
+						<a href="{{ participation_info.get_reject_url }}" class="btn btn-warning m-2">Reject Community</a>
+					{% endif %}
+				</div>
+			</div>
+		</div>
 	{% endif %}
 {% endif %}
 
