--- a/home/templates/home/community_cfp.html
+++ b/home/templates/home/community_cfp.html
@@ -126,7 +126,7 @@ Call for Outreachy community coordinators and mentors
 {% endfor %}
 </ul>
 
-{% if current_round %}
+{% if current_round and current_round.pingnew.has_passed and not current_round.lateorgs.has_passed %}
 	<h2>Submit a New FOSS community for Organizer Review</h2>
 	<p>First, double check that the community isn't listed in the above participating communities or past communities list. If the community is listed as a past Outreachy community, you can sign up to coordinate for that community. Coordinators will need to review the <a href="/mentor/#coordinator">coordinator duties</a> and community requirements in the sections above. Then submit a new community for review.
 	</p>
